[package]
name = "tg_backup"
version = "0.1.0"
authors = ["Alex Plate <AlexPl292@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.0", features = ["fs", "sync", "rt-multi-thread", "macros"]}
grammers-client = { path = "/Users/alex.plate/Develop/Contribution/grammers/lib/grammers-client" }
grammers-session = { path = "/Users/alex.plate/Develop/Contribution/grammers/lib/grammers-session" }
grammers-tl-types = { path = "/Users/alex.plate/Develop/Contribution/grammers/lib/grammers-tl-types" }
grammers-mtsender = { path = "/Users/alex.plate/Develop/Contribution/grammers/lib/grammers-mtsender" }
grammers-mtproto = { path = "/Users/alex.plate/Develop/Contribution/grammers/lib/grammers-mtproto" }
#grammers-client = { git = "https://github.com/AlexPl292/grammers" }
#grammers-session = { git = "https://github.com/AlexPl292/grammers" }
#grammers-tl-types = { git = "https://github.com/AlexPl292/grammers" }
#grammers-mtsender = { git = "https://github.com/AlexPl292/grammers" }
#grammers-mtproto = { git = "https://github.com/AlexPl292/grammers" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.11.0"
log = "0.4.8"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
