[package]
name = "tg_backup"
version = "0.1.27-alpha.0"
authors = ["Alex Plate <AlexPl292@gmail.com>"]
edition = "2021"
license = "Apache-3.0"
readme = "README.md"
description = "Backup your messages from the Telegram messenger"
repository = "https://github.com/AlexPl292/tg_backup"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.0", features = ["fs", "sync", "rt-multi-thread", "macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-logging = "2.0.2"
log = "0.4.8"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.1", features = ["derive"] }
pbr = "1.0.4"
home = "0.5.3"
shellexpand = "2.1.0"
sysinfo = "0.17.2"
log-panics = "2.0.0"
grammers-client = { git = "https://github.com/AlexPl292/grammers" }
grammers-session = { git = "https://github.com/AlexPl292/grammers" }
grammers-tl-types = { git = "https://github.com/AlexPl292/grammers" }
grammers-mtsender = { git = "https://github.com/AlexPl292/grammers" }
grammers-mtproto = { git = "https://github.com/AlexPl292/grammers" }
async-trait = "0.1.48"
regex = "1.5.4"
teloxide = { version = "0.10.1", features = ["macros", "auto-send"] }
pretty_env_logger = "0.4"
futures = "0.3.21"

[dev-dependencies]
tempdir = "0.3.7"
