[package]
name = "tg_backup_types"
version = "0.1.6"
authors = ["Alex Plate <AlexPl292@gmail.com>"]
edition = "2018"
license = "Apache-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
grammers-client = { git = "https://github.com/AlexPl292/grammers" }
chrono = { version = "0.4.19", features = ["serde"] }
